<resources>
    <string name="app_name">CavoshCafe2026</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="menu">Menú</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="carrito">Carrito</string>
    <string name="comenzar">Comenzar</string>
    <string name="correo">Correo</string>
    <string name="texto_header_login">Vamos a iniciar sesión</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrar">Registrar</string>
    <string name="password">password</string>
    <string name="password_recovery">Recuperar contraseña</string>
    <string name="texto_login">Inicia sesion usando</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="vamos_a_registrarte">Vamos a registrarte</string>
    <string name="nombres">Nombres</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="o_registrarse_con">o registrarse con</string>
    <string name="tienes_una_cuenta">tienes una cuenta?</string>
    <string name="cambiar">cambiar</string>
    <string name="content_description">content_description</string>
    <string name="cavosh">Cavosh</string>
    <string name="cafe">Cafe :</string>
    <string name="buenos_d_as">Buenos días...</string>
    <string name="lo_nuevo">Lo nuevo...</string>
    <string name="frecuentes_ordenados">Frecuentes ordenados</string>
    <string name="tienesunacuenta">Tienes una cuenta?</string>
    <string name="tu_cafe">tu cafe</string>
    <string name="mas">+</string>
    <string name="_7_00">$ 7.00</string>
    <string name="caffe_mocha">Caffe Mocha</string>
    <string name="_6_70">$ 6.70</string>
    <string name="caramel_macchiato">Caramel Macchiato</string>
    <string name="_4_00">$ 4.00</string>
    <string name="americano">Americano</string>
    <string name="_3_00">$ 3.00</string>
    <string name="vanilla_nlatte">Vanilla\nLatte</string>
    <string name="otros">Otros</string>
    <string name="moneda">Moneda</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="compartir_datos_de_ubicaci_n">Compartir datos de ubicación</string>
    <string name="recibir_notificaciones">Recibir notificaciones</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="descuento_de_estudiante">Descuento de estudiante</string>
    <string name="recompensas">Recompensas</string>
    <string name="historial_de_pedidos">Historial de pedidos</string>
    <string name="detalles_de_pago">Detalles de pago</string>
    <string name="detalles_de_la_cuenta">Detalles de la cuenta</string>
    <string name="cuenta">Cuenta</string>
    <string name="_124_puntos">124 puntos</string>
    <string name="laura_vat">Laura Vat</string>
    <string name="capuchino_tradicional">Capuchino Tradicional</string>
    <string name="latte_de_vainilla">Latte de Vainilla</string>
    <string name="aperitivos">Aperitivos</string>
    <string name="bebidas_fr_as">Bebidas frías</string>
    <string name="bebidas_calientes">Bebidas calientes</string>
    <string name="categor_as">Categorías</string>
</resources>