<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login">

    <!-- HEADER -->
    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sh_header_police_blue"
        android:paddingVertical="32dp"
        android:paddingHorizontal="16dp"
        android:text="@string/texto_header_login"
        android:textColor="@color/flesh"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- BOTÓN INICIAR SESIÓN -->
    <TextView
        android:id="@+id/tvIniciarSesion"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="-16dp"
        android:background="@drawable/sh_btn_carmine_pink"
        android:elevation="5dp"
        android:paddingVertical="12dp"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- BOTÓN REGISTRAR -->
    <TextView
        android:id="@+id/tvRegistrar"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="-16dp"
        android:background="@drawable/sh_btn_light_silver"
        android:paddingVertical="12dp"
        android:text="@string/registrar"
        android:textAlignment="center"
        android:textColor="@color/gunmetal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- CORREO -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCorreo"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvIniciarSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/sh_tv_bright_gray"
            android:paddingHorizontal="16dp"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:hint="@string/correo"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- CONTRASEÑA -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordd"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tilCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/sh_tv_bright_gray"
            android:paddingHorizontal="16dp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- RECUPERAR CONTRASEÑA -->
    <TextView
        android:id="@+id/tvRecuperarPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/password_recovery"
        android:textColor="@color/carmine_pink"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tilPasswordd"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- BOTÓN INICIAR SESIÓN -->
    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/sh_btn_gunmetal"
        android:text="@string/iniciar_sesion"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvRecuperarPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TEXTO SEPARADOR -->
    <TextView
        android:id="@+id/tvTextoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/texto_login"
        app:layout_constraintTop_toBottomOf="@id/btnIniciarSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- LÍNEA IZQUIERDA -->
    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:background="@color/carmine_pink"
        app:layout_constraintTop_toTopOf="@id/tvTextoLogin"
        app:layout_constraintBottom_toBottomOf="@id/tvTextoLogin"
        app:layout_constraintEnd_toStartOf="@id/tvTextoLogin"/>

    <!-- LÍNEA DERECHA -->
    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:background="@color/carmine_pink"
        app:layout_constraintTop_toTopOf="@id/tvTextoLogin"
        app:layout_constraintBottom_toBottomOf="@id/tvTextoLogin"
        app:layout_constraintStart_toEndOf="@id/tvTextoLogin"/>

    <!-- FACEBOOK -->
    <ImageView
        android:id="@+id/ivFacebook"
        android:layout_width="108dp"
        android:layout_height="84dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/sh_btn_flesh"
        android:contentDescription="@string/content_description"
        android:clickable="true"
        android:focusable="true"
        android:padding="20dp"
        android:src="@drawable/ic_facebook"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/tvTextoLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivGoogle"/>

    <!-- GOOGLE -->
    <ImageView
        android:id="@+id/ivGoogle"
        android:layout_width="108dp"
        android:layout_height="84dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/sh_btn_flesh"
        android:contentDescription="@string/content_description"
        android:clickable="true"
        android:focusable="true"
        android:padding="20dp"
        android:src="@drawable/ic_google"
        app:layout_constraintTop_toBottomOf="@id/tvTextoLogin"
        app:layout_constraintStart_toEndOf="@id/ivFacebook"
        app:layout_constraintEnd_toStartOf="@id/ivApple"/>

    <!-- APPLE -->
    <ImageView
        android:id="@+id/ivApple"
        android:layout_width="108dp"
        android:layout_height="84dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/sh_btn_flesh"
        android:contentDescription="@string/content_description"
        android:clickable="true"
        android:focusable="true"
        android:padding="20dp"
        android:src="@drawable/ic_apple"
        app:layout_constraintTop_toBottomOf="@id/tvTextoLogin"
        app:layout_constraintStart_toEndOf="@id/ivGoogle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TEXTO INFERIOR-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="24dp"
        android:text="@string/no_tienes_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0"
        android:layout_marginEnd="-500dp"
        android:layout_marginBottom="24dp"
        android:text="Registrate aqui"
        android:textColor="@color/carmine_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnIniciarSesion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnIniciarSesion"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>