<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Inicio">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sh_header_police_blue"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/content_description"
            android:elevation="5dp"
            android:src="@drawable/logo_cafes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cavosh"
            android:textColor="@color/carmine_pink"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/buenos_d_as"
            android:textColor="@color/flesh"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="tu cafe:"
            android:textColor="@color/flesh"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvUsuario"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvCafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="60dp"
            android:text="@string/cavosh"
            android:textColor="@color/flesh"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tvUsuario"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvCafeCambiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/cambiar"
            android:textColor="@color/flesh"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvUsuario"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/ivNotificacion"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/content_description"
            android:elevation="5dp"
            android:src="@drawable/ic_notificacion"
            app:layout_constraintBottom_toTopOf="@id/tvCafeCambiar"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- android:visibility="invisible" -->
        <View
            android:id="@+id/viNotificacion"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/sh_notificacion_on"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="@id/ivNotificacion"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <SearchView
        android:id="@+id/svBuscar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="-24dp"
        android:background="@drawable/sh_btn_light_silver"
        android:iconifiedByDefault="false"
        android:searchIcon="@null"
        android:queryHint="Buscar"
        app:layout_constraintTop_toBottomOf="@id/clHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivBuscar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/sh_notificacion_on"
        android:clickable="true"
        android:contentDescription="@string/content_description"
        android:focusable="true"
        android:padding="12dp"
        android:src="@drawable/ic_buscar"
        app:layout_constraintTop_toTopOf="@id/svBuscar"
        app:layout_constraintBottom_toBottomOf="@id/svBuscar"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/texto_nuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/lo_nuevo"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/svBuscar"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNuevos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/texto_nuevo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/texto_ordenados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/frecuentes_ordenados"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/rvNuevos"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFrecuentes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/texto_ordenados"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
